updated search results component. fixed grid spacing and redundant classes. updating background color. added hover animation to movies to match home page.

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -120,7 +120,6 @@ button {
 }
 
 .movie img {
-  position: relative;
   width: 100%;
   transition: transform 0.3s ease-out, box-shadow 0.5s ease-out;
   transform: scale(0.85);
@@ -288,29 +287,24 @@ iframe {
 
 .results-grid {
   display: grid;
-  grid-gap: 50px;
+  grid-gap: 10px;
   grid-template-columns: repeat(5, 1fr);
   justify-content: center;
+  align-items: center;
   max-width: 100vw;
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: lightgrey;
+  padding: 20px;
 }
 
 .results-grid img {
   width: 100%;
-  height: 300px;
+  transition: transform 0.3s ease-out, box-shadow 0.5s ease-out;
+  transform: scale(0.85);
 }
 
-.results-movie {
-  width: 200px;
-  place-self: center;
-  padding-top: 3em;
-  padding-bottom: 3em;
-}
-
-.hover01 result-image:hover {
-  -webkit-transform: scale(1.3);
-  transform: scale(1.3);
+.results-grid img:hover {
+  transform: scale(1);
+  box-shadow: 0px 2px 12px rgba(0, 0, 0, 0.5);
 }
 
 /* #### ------------Media Queries -------------------------####*/
